--- a/vagrant/testvm_vmware/Vagrantfile
+++ b/vagrant/testvm_vmware/Vagrantfile
@@ -13,7 +13,7 @@ Vagrant.configure("2") do |config|
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
   config.vm.box = "generic/ubuntu2204"
-  config.vm.hostname = "testvm_vmware"
+  config.vm.hostname = "testvm-vmware"
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
