--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -11,11 +11,11 @@ general {
         interval = 5
 }
 
-order += "wireless _first_"
+#order += "wireless _first_"
 #order += "ethernet _first_"
-order += "battery all"
-order += "load"
-order += "memory"
+#order += "battery all"
+#order += "load"
+#order += "memory"
 order += "tztime local"
 
 wireless _first_ {
