--- a/i3/config
+++ b/i3/config
@@ -181,7 +181,7 @@ bindsym $mod+r mode "resize"
 
 # Remove titlebar
 default_border pixel 1
-default_floating_border_pixel 1
+default_floating_border pixel 1
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
