--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -6,14 +6,14 @@
     configfilerepo: "https://raw.githubusercontent.com/Daedrus/configfiles/main"
   tasks:
     - name: Basic setup
-      ansible.builtin.include_tasks: basic.yml
+      ansible.builtin.import_tasks: basic.yml
     - name: Set up terminal
-      ansible.builtin.include_tasks: terminal.yml
+      ansible.builtin.import_tasks: terminal.yml
     - name: Set up shell
-      ansible.builtin.include_tasks: shell.yml
+      ansible.builtin.import_tasks: shell.yml
     - name: Set up editor
-      ansible.builtin.include_tasks: editor.yml
+      ansible.builtin.import_tasks: editor.yml
     - name: Set up display manager
-      ansible.builtin.include_tasks: displaymgr.yml
+      ansible.builtin.import_tasks: displaymgr.yml
     - name: Set up window manager
-      ansible.builtin.include_tasks: windowmgr.yml
+      ansible.builtin.import_tasks: windowmgr.yml
