--- a/vagrant/testvm_vmware/Vagrantfile
+++ b/vagrant/testvm_vmware/Vagrantfile
@@ -38,7 +38,7 @@ Vagrant.configure("2") do |config|
   # Create a public network, which generally matched to bridged network.
   # Bridged networks make the machine appear as another physical device on
   # your network.
-  config.vm.network "public_network", bridge: "Intel(R) Wireless-AC 9560 160MHz", auto_config: true
+  config.vm.network "public_network", bridge: "Intel(R) Wireless-AC 9560 160MHz", mac: "000C29AB72C2", auto_config: true
 
   # Share an additional folder to the guest VM. The first argument is
   # the path on the host to the actual folder. The second argument is
