Install fzf and add it as plugin for zsh and nvim

--- a/ansible/basic.yml
+++ b/ansible/basic.yml
@@ -5,6 +5,7 @@
     - name: Install X11 packages
       ansible.builtin.apt:
         name:
+          - fzf
           - xinit
           - x11-utils
           - x11-xserver-utils
