Install rlwrap package
Useful for providing command history to telnet sessions

--- a/ansible/basic.yml
+++ b/ansible/basic.yml
@@ -13,6 +13,7 @@
         name:
           - acl # For easy provisioning when using a non-vagrant user
           - fzf
+          - rlwrap
           - xinit
           - x11-utils
           - x11-xserver-utils
