--- a/ansible/basic.yml
+++ b/ansible/basic.yml
@@ -14,6 +14,7 @@
           - acl # For easy provisioning when using a non-vagrant user
           - fzf
           - rlwrap
+          - cmake
           - xinit
           - x11-utils
           - x11-xserver-utils
