--- a/vagrant/testvm_vmware/Vagrantfile
+++ b/vagrant/testvm_vmware/Vagrantfile
@@ -51,6 +51,9 @@ Vagrant.configure("2") do |config|
   # Example for VirtualBox:
   #
   config.vm.provider "vmware_desktop" do |v|
+    v.vmx['numvcpus'] = 2
+    v.vmx['memsize'] = 4096
+
     v.gui = true
   end
   #
@@ -60,8 +63,7 @@ Vagrant.configure("2") do |config|
   # Enable provisioning with a shell script. Additional provisioners such as
   # Ansible, Chef, Docker, Puppet and Salt are also available. Please see the
   # documentation for more information about their specific syntax and use.
-  # config.vm.provision "shell", inline: <<-SHELL
-  #   apt-get update
-  #   apt-get install -y apache2
-  # SHELL
+  config.vm.provision "shell", inline: <<-SHELL
+     apt-get install -y open-vm-tools-desktop
+  SHELL
 end
