--- a/ansible/terminal.yml
+++ b/ansible/terminal.yml
@@ -15,6 +15,21 @@
         path: /usr/bin/urxvt
       tags:
         - terminal_default
+    - name: Create extension folder
+      become_user: "{{ username }}"
+      ansible.builtin.file:
+        path: "/home/{{ username }}/.urxvt/ext/"
+        state: directory
+        mode: '0755'
+      tags:
+        - terminal_extensionfolder
+    - name: Get keyboard-select extension
+      become_user: "{{ username }}"
+      ansible.builtin.get_url:
+        url: "https://raw.githubusercontent.com/muennich/urxvt-perls/master/keyboard-select"
+        dest: "/home/{{ username }}/.urxvt/ext/"
+      tags:
+        - terminal_keyboardselect
     - name: Copy configuration file
       become_user: "{{ username }}"
       ansible.builtin.get_url:
