Have ccls output its log to a file when started by coc
This is useful for figuring out if there are any errors when a project
is indexed.

--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -2,13 +2,14 @@
 "languageserver": {
   "ccls": {
     "command": "ccls",
+    "args": ["-log-file=/tmp/ccls.log"],
     "filetypes": ["c", "cc", "cpp", "c++", "objc", "objcpp"],
     "rootPatterns": [".ccls", "compile_commands.json", ".git/", ".hg/"],
     "initializationOptions": {
-        "cache": {
-          "directory": "/tmp/ccls"
-        }
+      "cache": {
+        "directory": "/tmp/ccls"
       }
+    }
   }
 }
 }
