Install autocutsel for clipboard management
Not a big fan of having separate PRIMARY and CLIPBOARD, it gets
confusing when you don't know where an application has put its stuff.
I'd rather have one clipboard and it looks like autocutsel can do this.

Note that autocutsel and feh don't really belong to the window manager
setup but for now I will start them from i3 since I don't have a clear
picture of how the init sequence looks like.

--- a/ansible/windowmgr.yml
+++ b/ansible/windowmgr.yml
@@ -134,3 +134,24 @@
         line: exec_always --no-startup-id feh --recursive --bg-scale --no-fehbg --randomize ~/.wallpapers/*
       tags:
         - windowmgr_wallpaperhandler_configpatch
+
+- name: Install clipboard manager
+  tags: windowmgr
+  block:
+    - name: Install autocutsel
+      ansible.builtin.apt:
+        name:
+          - autocutsel
+        update_cache: true
+      tags:
+        - windowmgr_clipboardmgr
+    - name: Patch windowmgr config to run clipboard manager
+      become_user: "{{ username }}"
+      ansible.builtin.lineinfile:
+        path: "/home/{{ username }}/.config/i3/config"
+        line: "{{ item }}"
+      loop:
+        - "exec --no-startup-id autocutsel -s PRIMARY -f"
+        - "exec --no-startup-id autocutsel -s CLIPBOARD -f"
+      tags:
+        - windowmgr_clipboardmgr_configpatch
