--- a/i3-gaps/config
+++ b/i3-gaps/config
@@ -190,5 +190,8 @@ gaps outer 5
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
+        mode hide
+        hidden_state hide
+        modifier Mod1
         status_command i3status --config ~/.config/i3/i3status.conf
 }
