--- a/i3status/config
+++ b/i3status/config
@@ -11,9 +11,9 @@ general {
         interval = 5
 }
 
-#order += "wireless _first_"
-#order += "ethernet _first_"
-#order += "battery all"
+order += "wireless _first_"
+order += "ethernet _first_"
+order += "battery all"
 #order += "load"
 #order += "memory"
 order += "tztime local"
