--- a/i3/config
+++ b/i3/config
@@ -39,6 +39,9 @@ bindsym $mod+Control+Print exec --no-startup-id maim --select | xclip -selection
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
 
+exec_always --no-startup-id ~/.config/polybar/launch.sh
+bindsym $mod+b exec --no-startup-id polybar-msg cmd toggle
+
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
@@ -195,16 +198,6 @@ for_window [class="Alacritty"] floating_border pixel 0
 # Gaps
 gaps inner 4
 gaps outer 0
-
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-bar {
-        mode hide
-        hidden_state hide
-        modifier Mod1
-        status_command i3status
-        tray_output primary
-}
 
 # Automatically detect monitors and resolutions
 exec_always --no-startup-id autorandr --change
