--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -29,14 +29,13 @@ tertiary = ${colors.peach}
 alert = ${colors.maroon}
 disabled = ${colors.overlay0}
 
-[bar/mainbar]
+[general_bar_config]
+monitor = ${env:MONITOR}
 bottom = true
 
 width = 100%
 height = 24pt
-radius = 6
-
-; dpi = 96
+radius = 12
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -56,52 +55,25 @@ separator-foreground = ${colors.disabled}
 
 font-0 = MesloLGS NF;2
 
-modules-left = xworkspaces xwindow
-modules-right = wlan eth battery pulseaudio date
-
 cursor-click = pointer
 cursor-scroll = ns-resize
 
 enable-ipc = true
 
-wm-restack = i3
+[bar/mainbar]
+inherit = general_bar_config
+modules-left = i3
+modules-right = wlan eth date
 
-; override-redirect = true
 
-[module/xworkspaces]
-type = internal/xworkspaces
+[bar/sidebar]
+inherit = general_bar_config
+modules-left = i3
+modules-right = date
 
-label-active = %name%
-label-active-background = ${colors.background-alt}
-label-active-underline= ${colors.primary}
-label-active-padding = 1
-
-label-occupied = %name%
-label-occupied-padding = 1
-
-label-urgent = %name%
-label-urgent-background = ${colors.alert}
-label-urgent-padding = 1
-
-label-empty = %name%
-label-empty-foreground = ${colors.disabled}
-label-empty-padding = 1
-
-[module/xwindow]
-type = internal/xwindow
-label = %title:0:60:...%
-
-[module/pulseaudio]
-type = internal/pulseaudio
-
-format-volume-prefix = "VOL "
-format-volume-prefix-foreground = ${colors.primary}
-format-volume = <label-volume>
-
-label-volume = %percentage%%
-
-label-muted = muted
-label-muted-foreground = ${colors.disabled}
+[module/i3]
+type = internal/i3
+pin-workspaces = true
 
 [network-base]
 type = internal/network
@@ -124,8 +96,7 @@ label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
 type = internal/date
 interval = 1
 
-date = %H:%M
-date-alt = %Y-%m-%d %H:%M:%S
+date = %Y-%m-%d %H:%M:%S
 
 label = %date%
 label-foreground = ${colors.primary}
