--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -63,13 +63,42 @@ enable-ipc = true
 [bar/mainbar]
 inherit = general_bar_config
 modules-left = i3
-modules-right = wlan eth date
-
+modules-right = wlan eth battery date
 
 [bar/sidebar]
 inherit = general_bar_config
 modules-left = i3
 modules-right = date
+
+[module/battery]
+type = internal/battery
+
+battery = BAT0
+adapter = AC
+
+full-at = 98
+
+format-charging = <animation-charging> <label-charging>
+format-discharging = <ramp-capacity> <label-discharging>
+format-full = <ramp-capacity> <label-full>
+
+label-charging = %percentage%%
+label-discharging = %percentage%%
+
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
+ramp-capacity-foreground = ${colors.green}
+
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
+animation-charging-foreground = ${colors.green}
+animation-charging-framerate = 750
 
 [module/i3]
 type = internal/i3
@@ -78,28 +107,47 @@ pin-workspaces = true
 [network-base]
 type = internal/network
 interval = 5
-format-connected = <label-connected>
-format-disconnected = <label-disconnected>
-label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
 
 [module/wlan]
 inherit = network-base
 interface-type = wireless
-label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
+
+format-connected = <ramp-signal> <label-connected>
+format-disconnected = <label-disconnected>
+
+label-disconnected = 󰖪
+label-disconnected-foreground = ${colors.red}
+
+label-connected = %essid% %local_ip%
+
+ramp-signal-0 = 󰤯
+ramp-signal-1 = 󰤟
+ramp-signal-2 = 󰤢
+ramp-signal-3 = 󰤥
+ramp-signal-4 = 󰤨
+ramp-signal-5 = 󰤨
+ramp-signal-foreground = ${colors.peach}
 
 [module/eth]
 inherit = network-base
 interface-type = wired
-label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
+
+format-connected = <ramp-signal> <label-connected>
+label-connected = %local_ip%
+
+format-connected-foreground = ${colors.mauve}
+format-disconnected = <label-disconnected>
+
+ramp-signal-0 = 
+ramp-signal-0-foreground = ${colors.mauve}
 
 [module/date]
 type = internal/date
 interval = 1
 
-date = %Y-%m-%d %H:%M:%S
-
-label = %date%
-label-foreground = ${colors.primary}
+date = %Y-%m-%d
+time = %H:%M:%S
+label = %{F#b4befe}%{F-} %date% %{F#b4befe}%{F-} %time%
 
 [settings]
 screenchange-reload = true
